# game-and-watch-retro-go-cmake

./: .gitignore  CMakeLists.txt  oldcmake.txt
.cmake/: customconfig.json
.cmake/custom/: .reqenv  .time  .timestamp
.cmake/output/: CMakeCache.txt
